tests/test_proof/bad/output/money-empty.catala_en.Proof
[ERROR] [A.y] This variable might return an empty error:
 --> tests/test_proof/bad/money-empty.catala_en
  | 
8 |   context y content boolean
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
